# suvvyapi

./: .gitignore  README.md  openapi.json  pyproject.toml  requirements.txt  setup.cfg
suvvyapi/: __init__.py  _utils.py
suvvyapi-old/: __init__.py  wrapper.py
suvvyapi-old/asynchronous/: wrapper.py
suvvyapi-old/enums/: __init__.py
suvvyapi-old/models/: responses.py
suvvyapi/asynchronous/: wrapper.py
suvvyapi/enums/: __init__.py
suvvyapi/exceptions/: api.py
suvvyapi/history/: __init__.py
suvvyapi/models/: dialogue.py  history.py  message.py  responses.py  token_usage.py
suvvyapi/models/enums/: __init__.py  channel.py  content_type.py  event.py  reason.py  role.py
suvvyapi/models/files/: __init__.py  file.py
suvvyapi/models/message_data/: base.py  text.py  tool.py
suvvyapi/models/messages/content/: audio.py  base.py  event.py  image.py  text.py  tool_call.py  tool_response.py
suvvyapi/sync/: wrapper.py
suvvyapi/wrapper/: __init__.py  api.py
tests/: test_basic.py  test_chatgpt.py  test_history.py  test_new_chatgpt.py
