[tool.poetry]
name = "suvvyapi"
version = "2.0a8"
description = "A Python API wrapper for Suvvy AI API"
authors = ["Roman Poltorabatko <barabum@duck.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python", "wrapper", "chatgpt", "suvvy", "ai", "suvvyai"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/suvvyai/suvvyapi"

[project.urls]
"Issue Tracker" = "https://github.com/suvvyai/suvvyapi/issues"
"Documentation" = "https://github.com/suvvyai/suvvyapi/wiki"

[tool.poetry.dependencies]
python = ">=3.10"
httpx = "^0.26.0"
pydantic = "^2.5.3"
deprecation = "^2.1.0"

[tool.poetry.group.dev.dependencies]
devtools = "^0.12.2"
black = "^23.12.0"
isort = "^5.13.2"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
mypy = "^1.8.0"

[tool.isort]
profile = "black"
src_paths = ["."]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
ignore_missing_imports = true
disable_error_code = "attr-defined"
exclude = '^tests/'  # put --exclude="^tests/" as argument in PyCharm mypy plugin

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
