[metadata]
name = suvvyapi
version = 0.1a5
author = Roman Poltorabatko
author_email = barabum@duck.com
url = https://github.com/barabum0/suvvyapi
description = A Python API wrapper for Suvvy AI API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = python, api, wrapper, chatgpt, suvvy, ai, suvvyai
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/barabum0/suvvyapi/issues
    Source code = https://github.com/barabum0/suvvyapi
    Suvvy AI = https://suvvy.ai

[options]
packages = find:
python_requires = >= 3.10
install_requires = file: requirements.txt
